--- a/src/shared/index.scss
+++ b/src/shared/index.scss
@@ -2,4 +2,5 @@
 @forward "./extendme.scss";
 @forward "./mixins.scss";
 @forward "./wallpapers/wallpapers.scss";
+@forward "./material-ui-colors.scss";
 $button-border-color: white;
