--- a/src/shared/material-ui-colors.scss
+++ b/src/shared/material-ui-colors.scss
@@ -52,6 +52,8 @@ $material-color-red-200: #ef9a9a;
 $material-color-red-700: #d32f2f;
 $material-color-red-800: #c62828;
 $material-color-red-900: #b71c1c;
+$material-color-red-a200: #ff5252;
+
 
 $material-color-yellow-100: #fff9c4;
 $material-color-yellow-200: #fff59d;
