--- a/src/embed-blocks.scss
+++ b/src/embed-blocks.scss
@@ -15,9 +15,9 @@
 // # dataview
 
 // ## Dataview:Shared between views
-.markdown-source-view, .markdown-reading-view {
+.markdown-source-view,
+.markdown-reading-view {
   .block-language-dataview {
-
     border: 2px solid var(--material-color-deep-orange);
     border-radius: 1em 1em;
     background: var(--shade);
@@ -30,7 +30,7 @@
     .markdown-preview-sizer.markdown-preview-section {
       .block-language-dataviewjs {
         @extend %dataview-container;
-        padding: .5em 1em;
+        padding: 0.5em 1em;
       }
       // Make the inner dataview box be 90% of the containing embed box
       > div:last-child {
@@ -40,8 +40,6 @@
   }
 }
 
-
-
 // # source view
 .markdown-source-view {
   /* Remove scroll on embeds. */
@@ -49,28 +47,37 @@
   .internal-embed.markdown-embed.is-loaded[alt*="ui-noscroll"] {
     .markdown-embed-content {
       .markdown-preview-view.markdown-rendered.node-insert-event.show-indentation-guide
-      .markdown-preview-sizer.markdown-preview-section {
+        .markdown-preview-sizer.markdown-preview-section {
         overflow: hidden;
       }
     }
   }
 
-  
   .markdown-embed-content {
-
     .markdown-preview-view.markdown-rendered {
-  
       .block-language-dataviewjs {
+        p {
+          width: 100% !important;
+          background-color: shared.$callout;
+          ul {
+            margin: 0 !important;
+          }
+        }
+        > div:first-of-type {
+          background-color: shared.$accentAlt;
+          ul {
+            margin-top: 0.5em;
+          }
+        }
         li:has(span.internal-embed[alt*="=$"]) {
-          &~ li:nth-child(2n+2) {
-
-            border-top: .1em solid shared.$borderColor;
+          & ~ li:nth-child(2n + 2) {
+            border-top: 0.1em solid shared.$borderColor;
             background-color: shared.$callout;
           }
-          &~ li:nth-child(2n+1) {
+          & ~ li:nth-child(2n + 1) {
             background-color: shared.$calloutAlt;
 
-            border-top: .1em solid shared.$borderColor;
+            border-top: 0.1em solid shared.$borderColor;
           }
         }
       }
@@ -82,7 +89,6 @@
     // }
   }
   .cm-preview-code-block.cm-embed-block.markdown-rendered {
-
     .block-language-dataviewjs {
       @extend %dataview-container;
       ul.dataview.list-view-ul:nth-of-type(1) {
@@ -203,30 +209,35 @@ span[alt*="nlk"] {
   }
 }
 
-
 /** : Tranclusion/Embed sections */
-.internal-embed[alt*=nlk].markdown-embed {
+.internal-embed[alt*="nlk"].markdown-embed {
   /* hide file name on transcludes */
 }
-.internal-embed[alt*=nlk].markdown-embed .embed-title.markdown-embed-title {
+.internal-embed[alt*="nlk"].markdown-embed .embed-title.markdown-embed-title {
   display: none;
 }
-.internal-embed[alt*=nlk].markdown-embed .markdown-preview-sizer.markdown-preview-section {
-  padding: .1em 0 0 0 !important;
+.internal-embed[alt*="nlk"].markdown-embed
+  .markdown-preview-sizer.markdown-preview-section {
+  padding: 0.1em 0 0 0 !important;
   padding-left: 5px !important;
 }
-.internal-embed[alt*=nlk].markdown-embed .markdown-preview-sizer > div:nth-of-type(3) {
+.internal-embed[alt*="nlk"].markdown-embed
+  .markdown-preview-sizer
+  > div:nth-of-type(3) {
   display: none;
 }
 
-span[alt*=nlk].internal-embed.markdown-embed {
+span[alt*="nlk"].internal-embed.markdown-embed {
   padding: 0;
 }
-span[alt*=nlk].internal-embed.markdown-embed .markdown-preview-sizer.markdown-preview-section {
+span[alt*="nlk"].internal-embed.markdown-embed
+  .markdown-preview-sizer.markdown-preview-section {
   padding-left: 0 !important;
 }
 
-.markdown-reading-view .internal-embed[alt*=nlk].markdown-embed .markdown-preview-sizer.markdown-preview-section {
+.markdown-reading-view
+  .internal-embed[alt*="nlk"].markdown-embed
+  .markdown-preview-sizer.markdown-preview-section {
   padding: 0 0 0 0 !important;
   padding-left: 0px !important;
   margin: 0;
