--- a/src/multi-colored-folders.scss
+++ b/src/multi-colored-folders.scss
@@ -2,6 +2,14 @@
 @use "sass:list";
 @use "sass:map";
 
+%line-wrap-for-nav-title {
+  color: var(--FoldText);
+  line-height: 1.5em;
+  max-height: 3.2em;
+  max-width: 90%;
+  text-overflow: ellipsis;
+  white-space: pre-wrap;
+}
 /*
 A-source: https://forum.obsidian.md/t/adding-color-to-obsidian-a-rainbow-of-possibility/12805/11
 B-source: https://raw.githubusercontent.com/obsidian-community/obsidian-hub/main/02%20-%20Community%20Expansions/02.05%20All%20Community%20Expansions/CSS%20Snippets/Files%20explorer%20relations%20%26%20color%20%28Mara-Li%29.md
@@ -16,12 +24,8 @@ B-source: https://raw.githubusercontent.com/obsidian-community/obsidian-hub/main
 
     .nav-folder-title {
       .nav-folder-title-content {
-        white-space: pre-wrap;
-        color: var(--FoldText);
-        line-height: 1.5em;
-        max-height: 3.2em;
-        text-overflow: ellipsis;
-        max-width: 80%;
+        @extend %line-wrap-for-nav-title;
+
       }
     }
   }
@@ -62,12 +66,7 @@ B-source: https://raw.githubusercontent.com/obsidian-community/obsidian-hub/main
           }
 
           .nav-file-title-content {
-            color: var(--FoldText);
-            line-height: 1.5em;
-            max-height: 3.2em;
-            white-space: pre-wrap;
-            text-overflow: ellipsis;
-            // max-width: 75%;
+            @extend %line-wrap-for-nav-title;
           }
         }
       }
