--- a/src/plugin-stylings/fountain.scss
+++ b/src/plugin-stylings/fountain.scss
@@ -13,10 +13,15 @@
       margin: 0;
       // text-align: center;
       margin-bottom: 1em;
-    }
+      // width: 79%;
+      // transform: translate(12%, 0);
+      padding: 0 11%;
+  
+    }    
+  
     + p {
       margin-top: 0 !important;
-      margin-bottom: 0 !important;
+      // margin-bottom: 0 !important;
     }
     h4 {
       margin-top: 0em !important;
