Update fountain software to be fix the width

--- a/src/plugin-stylings/fountain.scss
+++ b/src/plugin-stylings/fountain.scss
@@ -1297,3 +1297,17 @@ padding: 0 0 0 2.2in !important;
     }
   }
 }
+
+
+// Customizations
+
+.screenplay {
+  // width: 70.5%;
+  width: 90%;
+
+  .dialogue {
+    h4 {
+      text-align: center !important;
+    }
+  }
+}
