Update explorer bar ui to contain two counts, note count and word count, without funkiness.

--- a/src/plugin-stylings/index.scss
+++ b/src/plugin-stylings/index.scss
@@ -5,3 +5,4 @@
 @forward "./dataview.scss";
 @forward "./fountain.scss";
 @forward "./novel-word-count.scss";
+@forward "./file-explorer-note-count.scss";
