--- a/src/plugin-stylings/novel-word-count.scss
+++ b/src/plugin-stylings/novel-word-count.scss
@@ -12,5 +12,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   text-align: right;
-  right: -3em;
+  // right: -3em;
+  text-align: right;
+  padding-right: 5em;
+  text-align: right;
 }
