--- a/src/shared/extendme.scss
+++ b/src/shared/extendme.scss
@@ -1,5 +1,6 @@
+@use "./wallpapers/wallpapers.scss" as wp;
 %fixed-bg {
-  background-image: var(--mm-image);
+  background-image: wp.$mm-image;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100% 100%;
